#pragma once

class Amarillo
{
private:
    /* data */
public:
    Amarillo(/* args */) {}
    ~Amarillo() {}
};