#pragma once

class Barra
{
private:
    /* data */
public:
    Barra(/* args */) {}
    ~Barra() {}
};