#pragma once

class BarraChica
{
private:
    /* data */
public:
    BarraChica(/* args */) {}
    ~BarraChica() {}
};