#pragma once

class BarraGrande
{
private:
    /* data */
public:
    BarraGrande(/* args */) {}
    ~BarraGrande() {}
};