#pragma once

class BolaDestructora
{
private:
    /* data */
public:
    BolaDestructora(/* args */) {}
    ~BolaDestructora() {}
};