#pragma once

class Bolita
{
private:
    /* data */
public:
    Bolita(/* args */) {}
    ~Bolita() {}
};