#pragma once

class Color
{
private:
    /* data */
public:
    Color(/* args */) {}
    ~Color() {}
};