#pragma once

class Eliminador
{
private:
    /* data */
public:
    Eliminador(/* args */) {}
    ~Eliminador() {}
};