#pragma once

class MultiBola
{
private:
    /* data */
public:
    MultiBola(/* args */) {}
    ~MultiBola() {}
};