#pragma once

class Naranja
{
private:
    /* data */
public:
    Naranja(/* args */) {}
    ~Naranja() {}
};