#pragma once

class Ronda
{
private:
    /* data */
public:
    Ronda(/* args */) {}
    ~Ronda() {}
};