#pragma once
#include <string>
#include <iostream>

class Verde
{
private:
    /* data */
public:
    Verde(/* args */) {}
    ~Verde() {}
};