#pragma once

class Vida
{
private:
    /* data */
public:
    Vida(/* args */) {}
    ~Vida() {}
};